# RustBlog

./: Cargo.toml  Dockerfile  fly.toml
.github/workflows/: fly.yml
posts/my-first-article/: post.md  post_frontmatter.toml
src/: error.rs  lib.rs  main.rs  prelude.rs  surrealdb_repo.rs
src/handlers/: home_handler.rs  mod.rs  post_handler.rs
src/model/: blog_model.rs  mod.rs  post_model.rs
src/utils/: macros.rs  mod.rs  try_froms.rs
static/css/: github-markdown-light.css  index.css  style.css
static/js/: app.js  repo-card.js  swup.umd.js
tailwind/: package.json  tailwind.config.js
templates/: base.html  experience.html  home.html  portfolio.html  post.html  posts.html
