[package]
name = "blog"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
actix-web = "4"
env_logger = "0.10.0"
lazy_static = "1.4.0"
actix-files = "0.6.1"
pulldown-cmark = { version = "0.9.1", default-features = false }
ignore = "0.4"
toml = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9", features = ["kv-rocksdb"] }
thiserror = "1"
log = "0.4.17"
hostname = "0.3.1"
dotenv = "0.15.0"
